correct bug